feat: grammer check & email draft
